fix the bug that anon users can not read single article

--- a/src/GarlicBlog/AppBundle/Resources/views/Articles/article.html.twig
+++ b/src/GarlicBlog/AppBundle/Resources/views/Articles/article.html.twig
@@ -29,7 +29,7 @@
                             </div>
                         </div>
                         <div class="col-md-2">
-                            {% if article.authorid == userId %}
+                            {% if userId is defined and article.authorid == userId %}
                                 <div class="pull-right icon_delete">
                                     <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
                                 </div>
