add new table for like and include the main js function

--- a/src/GarlicBlog/AppBundle/Resources/views/layout.html.twig
+++ b/src/GarlicBlog/AppBundle/Resources/views/layout.html.twig
@@ -71,7 +71,8 @@
     
     {% javascripts
         '@jquery'
-        '@bootstrap_js' 
+        '@bootstrap_js'
+        '@GarlicBlogAppBundle/Resources/public/js/main_functions.js'
         '@GarlicBlogAppBundle/Resources/public/js/main_handler.js' combine=true %}
         <script src="{{ asset_url }}"></script>
     {% endjavascripts %}
